tests/fixtures/invalid/pow_list_float_bool.py
# Cannot call pow() with List[int], Float, Bool
x = pow([1, 2, 3], 1.0, True)
